# PDF-Parser

./: .gitignore  README.md  [old]md to csv.ipynb  content_with_summaries (5).csv  main.py  md to csv.ipynb  md_to_csv.ipynb  output.csv  pyproject.toml  requirements.txt  worker.py
.ipynb_checkpoints/: English Pdf to  md-checkpoint.ipynb  README-checkpoint.md  [old]md to csv-checkpoint.ipynb  md_to_csv-checkpoint.ipynb
input/md/english/: 04MCKCC03072017.md  FARMER PRODUCER ORGANISATIONS.csv  FARMER PRODUCER ORGANISATIONS.md  FPO_Scheme_Guidelines_FINAL_English.md  NFSM12102018.md  (+4 more)
output/english/: 04MCKCC03072017.csv  04MCKCC03072017_new.csv  FARMER PRODUCER ORGANISATIONS.csv  FARMER PRODUCER ORGANISATIONS_new.csv  FPO_Scheme_Guidelines_FINAL_English.csv  FPO_Scheme_Guidelines_FINAL_English_new.csv  KharifAgroAdvisoryForFarmers.csv  NFSM12102018.csv  NFSM12102018_new.csv  RevisedPM-KISANOperationalGuidelines(English).csv  RevisedPM-KISANOperationalGuidelines(English)_new.csv  Revised_Operational_Guidelines.csv  Revised_Operational_Guidelines_new.csv  UGPs-Organic FarmingTechnologies and Strategies.csv  UGPs-Organic FarmingTechnologies and Strategies_new.csv  [old]FARMER PRODUCER ORGANISATIONS.csv
output/hindi/: ManjushaBookPart_I.csv  Natural_Farming_Kharif_Booklet.csv  Natural_Farming_Kharif_Booklet_new.csv  Pashupalan Margdarshika.csv  Pashupalan Margdarshika_new.csv  RabiBookallpagesfullbook_2019.csv  RabiBookallpagesfullbook_2019_new.csv  SAP2023_24.csv
src/: app.py  csv_preprocessing.py  markdown_parser.py  split_chunks.py  translate.py  utils.py
(+5 files in other folders)
